word wrap fix

--- a/style.css
+++ b/style.css
@@ -150,8 +150,9 @@ a:hover {
   background-color: #fff;
   border: 1px solid #607d8b;
   display: block;
-  height: 150px;
+  min-height: 150px;
   margin: 15px auto;
+  overflow-wrap: break-word;
   width: 85%;
 }
 
